--- a/front-end/src/app/core/profile/profile/profile.component.html
+++ b/front-end/src/app/core/profile/profile/profile.component.html
@@ -8,47 +8,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script> -->
 </head>
 
 <body>
-    <div id="page-header">
-        <h1 style="padding-top: 50px">{{ user.name }}</h1>
-        <p>{{ user.email }}</p>
-    </div>
+    <h1 class="mt-5" style="text-align: center; font-size: 50px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Hồ sơ cá nhân</h1>
+    <br>
+    <form (ngSubmit)="updateUser()">
+        <div class="container mt-5">
+            <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+                <div class="row justify-content-center mt-5">
+                    <div style="text-align: center; width: 400px;" class="col-7">
+                        <img style="border-radius: 50%;" width="200px" height="200px" [src]="user.image" />
+                        <div class="mt-3">
+                            <input style="left: 70px; position: relative;" type="file" id="file" #userPhoto (change)="onFileSelected($event)" name="image" autocomplete="off" />
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <div style="width: 400px;">
+                            <h1 style="text-align: center;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">Thông tin</h1>
+                            <div class=" mb-3 ">
+                                <label>Tên người dùng</label>
+                                <input class="form-control " type="text " required [(ngModel)]="user.name " id="name " name="name " />
+                            </div>
+                            <div class="mb-3 ">
+                                <label>Tài khoản</label>
+                                <input disabled class="form-control " type="text " required [(ngModel)]="user.email " id="email " name="email " />
+                            </div>
+                            <div class="mb-3 ">
+                                <label>Mật khẩu</label>
+                                <div class="input-group ">
+                                    <input disabled class="form-control " type="password " required value="*********** " id="password " name="password " />
+                                    <span class="input-group-text " id="basic-addon2 "><button  class="btn btn-link " (click)="changePassword() ">Đổi mật khẩu</button>
+                            </span>
+                                </div>
 
-    <div id="page-body">
-        <div id="property">
-            <img class="mt-5" width="80%" src="https://a.trellocdn.com/prgb/dist/images/member-home/taco-privacy.ced1e262c59e0225e3aa.svg" />
-            <h1 class="mt-3">Quản lý thông tin cá nhân của bạn</h1>
-            <img width="200px" height="200px" [src]="user.image" />
-            <form style="width: 50%; left: 25%; position: relative" (ngSubmit)="updateUser()">
-                <div class="form-group">
-                    <input class="mt-3" style="margin-left: 100px" type="file" id="file" #userPhoto (change)="onFileSelected($event)" name="image" autocomplete="off" />
+                            </div>
+                            <div class="mb-3 ">
+                                <label>Phone</label>
+                                <input class="form-control " type="text " [(ngModel)]="user.phone " id="phone " name="phone " />
+
+                            </div>
+                            <div class="mb-3 ">
+                                <input class="form-control btn btn-success mt-3 " type="submit " value="Cập nhận thông tin " />
+                            </div>
+                            <div style="text-align: center; " class="mb-3 ">
+                                <button class="btn btn-link " (click)="back() ">Quay lại</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label>Tên người dùng</label>
-                    <input class="form-control" type="text" required [(ngModel)]="user.name" id="name" name="name" />
-                </div>
-                <div class="form-group">
-                    <label>Phone</label>
-                    <input class="form-control" type="text" [(ngModel)]="user.phone" id="phone" name="phone" />
-                </div>
-                <div class="form-group">
-                    <input class="form-control btn btn-success mt-3" type="submit" value="Lưu" />
-                </div>
-                <button class="btn btn-link" (click)="changePassword()">Đổi mật khẩu</button>
-                <button class="btn btn-link" (click)="back()">Quay lại</button>
-            </form>
+            </div>
         </div>
-    </div>
+    </form>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
 </body>
 
 </html>
