--- a/front-end/src/app/core/tasklist/tasklist.component.css
+++ b/front-end/src/app/core/tasklist/tasklist.component.css
@@ -368,6 +368,15 @@ Remove or comment-out the code block below to see how the browser will fall-back
         display: grid;
         grid-template-rows: auto minmax(auto, 1fr) auto;
     }
+    
+    .list-body {
+        font-family: sans-serif;
+        display: grid;
+        border-radius: 5px;
+        width: 200px;
+        height: fit-content;
+        background-color: rgba(255, 255, 255, 0.5);
+    }
 
     .list-items {
         display: grid;
