--- a/front-end/src/app/core/tasklist/tasklist.component.html
+++ b/front-end/src/app/core/tasklist/tasklist.component.html
@@ -82,12 +82,14 @@
         </button>
       </div>
     </section>
-    <div class="container">      
+    <div class="container">   
+      <div class="list-body"> 
         <div class="task-body">
           <ul *ngFor="let task of tasks">
             <li>{{task.title}}</li>
           </ul>
         </div>
+      </div>  
       </div>
 
     <!-- Optional JavaScript -->
