--- a/front-end/src/app/password/password.component.html
+++ b/front-end/src/app/password/password.component.html
@@ -39,6 +39,9 @@
                     <div *ngIf="newPassAgain.errors && (newPassAgain.valid || newPassAgain.touched)">
                         <small class="text-danger" *ngIf="newPassAgain.errors.required">Mật khẩu mới không được để trống</small>
                     </div>
+                    <div *ngIf="newPassAgain.valid && newPassAgain.value != newPass.value">
+                        <small class="text-danger" *ngIf="newPassAgain.valid && newPassAgain.value != newPass.value">Mật khẩu không khớp </small>
+                    </div>
                 </div>
                 <button class="btn btn-success" (click)="updatePassword()" [disabled]="pass.form.invalid">Đổi mật khẩu</button>
                 <button class="btn btn-link" (click)="back()">Quay lại</button>
