--- a/front-end/src/app/core/boardlist/boardlist.component.css
+++ b/front-end/src/app/core/boardlist/boardlist.component.css
@@ -1,11 +1,12 @@
 .my-group {
     margin-top: 25px;
     width: 100%;
-    height: 180px;
+    /* height: 180px; */
     left: 30px;
-    /* background-color: greenyellow; */
+    background-color: greenyellow;
     padding: 10px;
     border-radius: 10px;
+    overflow: hidden;
     border: 2px solid white;
 }
 
