--- a/front-end/src/app/core/group-detail/group-detail.component.html
+++ b/front-end/src/app/core/group-detail/group-detail.component.html
@@ -48,12 +48,13 @@
         </div>
     </nav>
     <div class="container">
-      <div class="header">
-          <h1>{{ group.name }}</h1>
+      <div class="header mt-5" style="text-align: center;">
+          <h1>Dự án {{ group.name }}</h1>
+          <button class="btn btn-danger" (click)="deleteGroup()">Xóa dự án</button>
+
       </div>
       <div class="body">
-        Thành viên của nhóm
-        <button class="btn btn-danger" (click)="deleteGroup()">Xóa nhóm</button>
+        Thành viên vào dự án
         <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSubmit()">
           <input [(ngModel)]="user.email" name="email" class="form-control mr-sm-2" type="search" placeholder="Nhập email ">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Thêm thành viên</button>
@@ -63,7 +64,10 @@
               <tr>
                 <td><div style="width: 30px;float: left; background-size: cover; height: 30px; border-radius: 50%; background-image: url({{user.image}});"></div>{{ user.name }}</td>
                 <td>{{ user.email }}</td>
-                <td *ngIf="group.user_id !== user.id"><button (click)="deleteMember(user.id)">Loại bỏ...</button></td>
+                <td *ngIf="group.user_id !== user.id"><button class="btn btn-danger" (click)="deleteMember(user.id)"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-x" viewBox="0 0 16 16">
+                  <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                  <path fill-rule="evenodd" d="M12.146 5.146a.5.5 0 0 1 .708 0L14 6.293l1.146-1.147a.5.5 0 0 1 .708.708L14.707 7l1.147 1.146a.5.5 0 0 1-.708.708L14 7.707l-1.146 1.147a.5.5 0 0 1-.708-.708L13.293 7l-1.147-1.146a.5.5 0 0 1 0-.708z"/>
+                </svg>  Loại bỏ...</button></td>
               </tr>
             </tbody>
           </table>
