--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -46,18 +46,30 @@
             >
           </li>
         </ul>
-        <a class="btn" mat-button [matMenuTriggerFor]="animals"><div
-          id="avatar"
-          style="background-image: url({{user.image}});"
-          title="{{ user.name }} ( {{ user.email }} )"
-        ></div></a>
-<!-- #docregion sub-menu -->
-<mat-menu #animals="matMenu">
-  <a (click)="getInfo()" mat-menu-item>Hồ sơ cá nhân</a>
-  <a (click)="logOut()" mat-menu-item>Đăng xuất </a>
-</mat-menu>
-<!-- #enddocregion sub-menu -->
-
+        <ul class="navbar-nav my-2 my-sm-0">
+          <li class="nav-item">
+            <a (click)="getInfo()"
+              ><div
+                id="avatar"
+                style="background-image: url({{user.image}});"
+                title="{{ user.name }} ( {{ user.email }} )"
+              ></div>
+            </a>
+                </li>
+                <li class="nav-item">
+                    <div>
+                        <a class="btn btn-link" (click)="getInfo()">
+                            <p id="getInfo" style="color: white;">{{ user.name }}</p>
+                        </a>
+                    </div>
+                </li>
+                <li class="nav-item ml-3">
+                    <a title="Đăng xuất" id="logout" class="btn" (click)="logOut()"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+                      <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                    </svg></a>
+                </li>
+            </ul>
         </div>
     </nav>
 
@@ -97,13 +109,13 @@
                                 <div class="col md-5">
                                     <div class="container">
                                         <div class="row">
-                                            <div class="col-6">
-                                                <h2> <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-diagram-3-fill" viewBox="0 0 16 16">
-                                      <path fill-rule="evenodd" d="M6 3.5A1.5 1.5 0 0 1 7.5 2h1A1.5 1.5 0 0 1 10 3.5v1A1.5 1.5 0 0 1 8.5 6v1H14a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0V8h-5v.5a.5.5 0 0 1-1 0v-1A.5.5 0 0 1 2 7h5.5V6A1.5 1.5 0 0 1 6 4.5v-1zm-6 8A1.5 1.5 0 0 1 1.5 10h1A1.5 1.5 0 0 1 4 11.5v1A1.5 1.5 0 0 1 2.5 14h-1A1.5 1.5 0 0 1 0 12.5v-1zm6 0A1.5 1.5 0 0 1 7.5 10h1a1.5 1.5 0 0 1 1.5 1.5v1A1.5 1.5 0 0 1 8.5 14h-1A1.5 1.5 0 0 1 6 12.5v-1zm6 0a1.5 1.5 0 0 1 1.5-1.5h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5v-1z"/>
-                                    </svg> {{ group.group.name }}</h2>
+                                            <div class="col-6" style="width: 200px;">
+                                                <h2><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
+                                                  <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/>
+                                                </svg> {{ group.group.name }}</h2>
                                             </div>
                                             <div class="col-4">
-                                                <button style="background-color: lightgray;" class="buttonn mr-4">
+                                                <button style="background-color: lightgray;" class="buttonn mr-2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
