--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -18,7 +18,7 @@
     <div class="row justify-content-center">
         <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 25rem; height: 30rem;">
             <div class="card-body">
-                <form (ngSubmit)="getToken()" #login ="ngForm">
+                <form  #login ="ngForm">
                     <p style="text-align: center; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"> <b> Đăng nhập vào SevenG </b></p>
                     <br>
                     <br>
@@ -30,13 +30,22 @@
                         </div>
                     </div>
                     <div class="mb-3">
-                        <input [(ngModel)]="password" name="password" required type="password" required #pass='ngModel' [class.is-invalid]="pass.invalid && pass.touched" class="form-control" placeholder="Nhập mật khẩu">
+                        <div class="input-group ">
+                          <input style="float: left;" class="form-control" matInput [type]="hide ? 'password' : 'text'" [(ngModel)]="password" name="password" required pattern="[\w]+[\w]{5,}" type="password" required #pass='ngModel' [class.is-invalid]="pass.invalid && pass.touched" placeholder="Nhập mật khẩu">
+                          <span class="input-group-text " id="basic-addon2 ">
+                              <button style="float: right; border: 0px ; background-color: white;" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                            </button>
+                          </span>
+                        </div>
                         <div *ngIf="pass.errors && (pass.valid || pass.touched)">
                             <small class="text-danger" *ngIf="pass.errors.required">Mật khẩu không được để trống</small>
+                            <small class="text-danger" *ngIf="pass.errors.pattern">Mật khẩu phải hơn 6 ký tự và không được dùng ký tự đặc biệt</small>
                         </div>
-                    </div>
+                      </div>
+                      
                     <div style="text-align: center;" class="mb-3">
-                        <button type="submit" class="loginButton btn btn-success " [disabled]="login.form.invalid">Đăng nhập</button>
+                        <button type="submit" class="loginButton btn btn-success " [disabled]="login.form.invalid" (click)="getToken()">Đăng nhập</button>
                     </div>
                     <p style="text-align: center;">Hoặc</p>
                     <div style="text-align: center;" class="mb-3">
