--- a/front-end/src/app/core/column-list/column-list.component.css
+++ b/front-end/src/app/core/column-list/column-list.component.css
@@ -1,78 +1,137 @@
 .example-list {
-  width: 100%;
-  max-width: 100%;
-  border: solid 1px #ccc;
-  min-height: 60px;
-  display: flex;
-  flex-direction: row;
-  background: white;
-  border-radius: 4px;
-  overflow: auto;
+    width: 100%;
+    max-width: 100%;
+    border: solid 1px #ccc;
+    min-height: 60px;
+    display: flex;
+    flex-direction: row;
+    background: white;
+    border-radius: 4px;
+    overflow: auto;
 }
 
 .cdk-drag-preview {
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
-  opacity: 0;
+    opacity: 0;
 }
 
 .cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .example-box:last-child {
-  border: none;
+    border: none;
 }
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
-
 
 .example-container {
-  margin: 0 25px 25px 0;
-  display: inline-block flex;
-  vertical-align: top;
-  padding: 20px 10px;
-  border-right: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  cursor: move;
-  background: white;
-  font-size: 14px;
-  flex-grow: 1;
-  flex-basis: 0;
-}
-
-.task {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  cursor: move;
-  background: white;
-  font-size: 14px;
+    margin: 0 25px 25px 0;
+    display: inline-block flex;
+    vertical-align: top;
+    padding: 20px 10px;
+    border-right: solid 1px #ccc;
+    color: rgba(0, 0, 0, 0.87);
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    cursor: move;
+    background: white;
+    font-size: 14px;
+    flex-grow: 1;
+    flex-basis: 0;
 }
 
 .task-list {
-  width: 300px;
-  border: solid 1px #ccc;
-  min-height: 60px;
-  background: white;
-  border-radius: 4px;
-  overflow: hidden;
-  display: block;
+    width: 300px;
+    border: solid 1px #ccc;
+    min-height: 60px;
+    background: white;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.my-group {
+    margin-top: 25px;
+    width: 100%;
+    /* height: 180px; */
+    left: 30px;
+    /* background-color: greenyellow; */
+    padding: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    border: 2px solid white;
+}
+
+.my-board {
+    color: white;
+    padding-top: 5px;
+    padding-left: 10px;
+    margin-left: 10px;
+    width: 200px;
+    height: 100px;
+    float: left;
+    background-color: rgb(2, 129, 80);
+    border-radius: 10px;
+    border: 0px;
+}
+
+.add-board-button {
+    border: white;
+    margin-left: 10px;
+    width: 200px;
+    height: 100px;
+    border-radius: 10px;
+    /* background: url('https://www.ppt-backgrounds.net/thumbs/cools-iphone-slide-backgrounds.jpg') no-repeat; */
+}
+
+.buttonn {
+    width: 150px;
+    border: white;
+    border-radius: 5px;
+    padding: 5px 10px;
+}
+
+#avatar {
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    background-size: cover;
+}
+
+.navbar {
+    background-color: #3399ff;
+}
+
+.navbar-brand {
+    font-size: 32px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif!important;
+    color: white !important;
+}
+
+.navbar-brand:hover {
+    color: grey!important;
+}
+
+#getInfo:hover {
+    color: grey!important;
+}
+
+#logout:hover {
+    color: white!important;
+}
+
+.board-button {
+    float: right;
+    border: 0px rgb(2, 129, 80);
+    background-color: rgb(2, 129, 80);
+    color: white;
 }
