--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -60,6 +60,8 @@
     </nav>
 
     <!-- Board info bar -->
+    <button mat-button (click)="openDialog()">PLease</button>
+
     <div class="container">
         <div class="row">
             <div style="width: 10px;" class="col-3">
