--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -66,13 +66,23 @@
                 <div style="text-align: left;;" class="mt-5">
                     <h2>Thêm nhóm mới</h2>
                 </div>
-                <div style="width: 200px;" class="mt-2">
+                <button class="mt-2 btn btn-outline-primary form-control" (click)="showFormAddGroup()" *ngIf="show === true">Thêm nhóm mới</button>
+                <div *ngIf="show === false" style="width: 200px;" class="mt-2">
                     <form #addform='ngForm' (ngSubmit)="createGroup()">
                         <input placeholder="Nhập tên nhóm" type="text" name="name" required #groupp='ngModel' [class.is-invalid]="groupp.invalid && groupp.touched" [(ngModel)]="group.name" class="form-control">
                         <div *ngIf="groupp.errors && (groupp.valid || groupp.touched)">
                             <small class="text-danger" *ngIf="groupp.errors.required">Tên nhóm không được để trống</small>
                         </div>
-                        <button type="submit" class="mt-2 btn btn-outline-primary form-control" [disabled]="addform.form.invalid">Thêm nhóm</button>
+                        <div class="row">
+                            <div class="col-6">
+                                <button type="submit" class="mt-2 btn btn-success form-control" [disabled]="addform.form.invalid">Thêm nhóm</button>
+                            </div>
+                            <div class="col-6">
+                                <button class="mt-2 btn " (click)="hideFormAddGroup()()"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                                  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                                </svg></button>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
