--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -78,7 +78,7 @@
                                 <button type="submit" class="mt-2 btn btn-success form-control" [disabled]="addform.form.invalid">Thêm nhóm</button>
                             </div>
                             <div class="col-6">
-                                <button class="mt-2 btn " (click)="hideFormAddGroup()()"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                                <button class="mt-2 btn " (click)="hideFormAddGroup()"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                                   <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                                 </svg></button>
                             </div>
