--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -56,34 +56,43 @@
                     </mat-menu>
         </div>
     </nav>
-
-    <div cdkDropList cdkDropListGroup cdkDropListOrientation="horizontal" class="example-list" (cdkDropListDropped)="dropColumn($event)">
-        <div class="column-content mt-3 ml-4 shadow p-2 mb-2 rounded card-columns" *ngFor="let column of columns" cdkDrag>
-            <div class="card-body float-left">
+<div>
+    <div cdkDropList cdkDropListGroup cdkDropListOrientation="horizontal" class="my-board" (cdkDropListDropped)="dropColumn($event)">
+        <div class="mt-3 ml-4 shadow p-2 mb-2" *ngFor="let column of columns" cdkDrag>
+            <div class="title">
                 <h2>{{ column.column.name }}</h2>
             </div>
-            <div cdkDropList [cdkDropListData]="column.tasks" class="card" (cdkDropListDropped)="dropTask($event,column.column.id)">
-                <div class="swimlane-content" *ngFor="let task of column.tasks" cdkDrag>
+            <div>
+            <div cdkDropList [cdkDropListData]="column.tasks" class="my-column" (cdkDropListDropped)="dropTask($event,column.column.id)">
+                <div class="my-task" *ngFor="let task of column.tasks" cdkDrag>
                     {{ task.title }}
                 </div>
-            </div>
-        </div>
-        <div class="column-content mt-3 ml-4 card-columns bg-w" cdkDrag>
-            <div style="border: 0px;" class="card shadow  rounded">
-                <div class="card-body">
-                    <form (ngSubmit)="addColumn()">
-                        <div>
-                            <input class="form-control" [(ngModel)]="column.name" name="name" />
-                        </div>
-                        <div>
-                            <button class="form-control btn btn-outline-primary mt-2" type="submit">Thêm cột mới</button>
-                        </div>
-                    </form>
+                <div class="mt-2">
+                  <form>
+                    <input class="form-control" type="text">
+                    <button class="form-control btn btn-success mt-1">them</button>
+                  </form>
                 </div>
             </div>
-        </div>
-    </div>
 
+          </div>
+        </div>
+        <div class="mt-3 ml-4 add-form">
+          <div style="border: 0px;" class="shadow">
+              <div  my-column>
+                  <form (ngSubmit)="addColumn()">
+                      <div>
+                          <input class="form-control" [(ngModel)]="column.name" name="name" />
+                      </div>
+                      <div>
+                          <button class="form-control btn btn-outline-primary mt-2" type="submit">Thêm cột mới</button>
+                      </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+    </div>
+</div>
 
 
     <!-- Optional JavaScript -->
